src/apps/core/style/app.scss
/* ... */
.core-topbar #main_topbar_account_toggle_container .account-browser-container .account-search-link .account-search-value {
	text-shadow: none;
	font-weight: 700;
}

.core-topbar #main_topbar_account_toggle_container .account-browser-container .account-previous-link {
	line-height: 20px;
	border: none;
}
.core-topbar #main_topbar_account_toggle_container .account-browser-container .account-previous-link * {
	color: #909099;
	font-size: 12px;
	vertical-align: middle;
}
.core-topbar #main_topbar_account_toggle_container .account-browser-container .account-previous-link i:before {
	content: "\f060";
}

.core-topbar #main_topbar_account_toggle_container .account-toggle-header {
	background: #202029;
	color: #c0c0c9;
	padding: 10px 12px 0px 12px;
	position: relative;
}
.core-topbar #main_topbar_account_toggle_container .current-account-label {
	font-size: 12px;
}
.core-topbar #main_topbar_account_toggle_container .current-account-container {
	color: $primary-color;
}

.core-topbar #main_topbar_account_toggle_container .missing-info {
	color: #909099;
	font-style: italic;
}

.core-topbar #main_topbar_account_toggle_container .home-account-link {
	position: absolute;
	top: 15px;
	right: 15px;
	cursor: pointer;
	color: #606069;
}
.core-topbar #main_topbar_account_toggle:not(.masquerading) .home-account-link {
	display: none;
}
.core-topbar #main_topbar_account_toggle_container .home-account-link:hover {
	color: #c0c0c9;
}
#main_topbar_account_toggle.masquerading ~ #main_topbar_myaccount i.fa:before {
	content: "\f085";
}

/************************************************************/
/********************** LOADING SPINNER *********************/
/************************************************************/

.loading-wrapper {
	position: fixed;
	z-index: 2000;
	top: 0;
	display: none;
	width: 200px;
	height: 200px;
	background: $primary-color;
	box-shadow: 0px 0px 2px 0px #303039;
}
.loading-wrapper.fixed-left {
	left: 0;
	-webkit-transform: translateX(-50%) translateY(-50%) rotate(315deg);
	   -moz-transform: translateX(-50%) translateY(-50%) rotate(315deg);
		-ms-transform: translateX(-50%) translateY(-50%) rotate(315deg);
		 -o-transform: translateX(-50%) translateY(-50%) rotate(315deg);
			transform: translateX(-50%) translateY(-50%) rotate(315deg);
}
.loading-wrapper.fixed-right {
	right: 0;
	-webkit-transform: translateX(50%) translateY(-50%) rotate(45deg);
	   -moz-transform: translateX(50%) translateY(-50%) rotate(45deg);
		-ms-transform: translateX(50%) translateY(-50%) rotate(45deg);
		 -o-transform: translateX(50%) translateY(-50%) rotate(45deg);
			transform: translateX(50%) translateY(-50%) rotate(45deg);
}
.loading-wrapper.active {
	display: block;
}
.loading-wrapper .line {
	position: relative;
	display: inline-block;
	-webkit-box-sizing: border-box;
	   -moz-box-sizing: border-box;
			box-sizing: border-box;
	padding: .5em;
	text-align: center;
	vertical-align: middle;
	border: 5px solid transparent;
	border-top-color: #fff;
	border-bottom-color: #fff;
	border-radius: 50%;
	background: transparent;
}
.loading-wrapper .line.outer {
	top: 130px;
	left: 80px;
	-webkit-animation: half-spin 1s infinite;
	   -moz-animation: half-spin 1s infinite;
		 -o-animation: half-spin 1s infinite;
			animation: half-spin 1s infinite;
}
.loading-wrapper .line.inner {
	-moz-animation: half-spin-reverse 1s infinite;
	  -o-animation: half-spin-reverse 1s infinite;
		 animation: half-spin-reverse 1s infinite;

	webkit-animation: half-spin-reverse 1s infinite;
}
@-webkit-keyframes half-spin {
	0% {
		-webkit-transform: rotateZ(-45deg);
	}
	100% {
		-webkit-transform: rotateZ(135deg);
	}
}
@-webkit-keyframes half-spin-reverse {
	0% {
		-webkit-transform: rotateZ(0deg);
	}
	100% {
		-webkit-transform: rotateZ(-360deg);
	}
}
@-moz-keyframes half-spin {
	0% {
		-moz-transform: rotateZ(-45deg);
	}
	100% {
		-moz-transform: rotateZ(135deg);
	}
}
@-moz-keyframes half-spin-reverse {
	0% {
		-moz-transform: rotateZ(0deg);
	}
	100% {
		-moz-transform: rotateZ(-360deg);
	}
}
@-o-keyframes half-spin {
	0% {
		-o-transform: rotateZ(-45deg);
	}
	100% {
		-o-transform: rotateZ(135deg);
	}
}
@-o-keyframes half-spin-reverse {
	0% {
		-o-transform: rotateZ(0deg);
	}
	100% {
		-o-transform: rotateZ(-360deg);
	}
}
@keyframes half-spin {
	0% {
		transform: rotateZ(-45deg);
	}
	100% {
		transform: rotateZ(135deg);
	}
}
@keyframes half-spin-reverse {
	0% {
		transform: rotateZ(0deg);
	}
	100% {
		transform: rotateZ(-360deg);
	}
}


/************************************************************/
/******************** UPLOAD PROGRESS BAR *******************/
/************************************************************/
#upload_progress {
	display: none;
}

#upload_progress .upload-progress-overlay {
	position: fixed;
	z-index: 10000;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: #303039;
	opacity: 0.5;
}

#upload_progress .upload-progress-content {
	position: absolute;
	z-index: 10001;
	top: 40%;
	left: 50%;
	transform: translate(-50%, -50%);
	border: solid 1px #606069;
	border-radius: 2px;
	width: 300px;
	background: #f0f0f9;
	box-shadow: 0px 0px 10px 2px #606069;
}

#upload_progress .upload-progress-title {
	padding: 10px;
	text-align: center;
	border-bottom: solid 1px #606069;
}

#upload_progress .upload-progress-bar {
	margin: 20px;
	height: 20px;
	line-height: 20px;
	border: solid 1px #004c80;
	background: #e0e0e9;
}

#upload_progress .upload-progress-bar > div {
	background: $primary-color;
	height: 100%;
	width: 0%;
	text-align: center;
	font-size: 12px;
}


/************************************************************/
/********************** FLOATING FOOTER *********************/
/************************************************************/

.core-footer {
	position: fixed;
	right: 2px;
	bottom: 2px;
}

/* Hack for jira collector issue */
#atlwdg-trigger {
	z-index: 95; // otherwise it covers popup overlays at 100
}

.core-footer.feedback-enabled {
	right: 117px;
}
/* ... */

